	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
06/09
	* Fixed some bugs on Moscovia mobs [Playtester]
	- fixed Mavka and Lesavka being exchanged
	- reverted kRO names back to kRO
	* Slightly adjusted Thor Volcano mob def and mdef [Playtester]
	- Updated Moscovia mobs stats, thanks to Qwadrat [Lupus]
06/08
	* Small fixes on Moscovia mobs [Playtester]
	- removed poring drops and exp
	- commented bullet (not needed in eA as far as I know)
	* Updated Moscovia mobs levels,hp,exp (no more info yet) [Lupus]
06/06
	* Added some 11.3 mobs [Playtester]
	* Added Moscovia mobs with poring stats [Lupus]
	- Added Moscovia maps in the map index
06/05
	* Fixed Spirited Guitar [Playtester]
	* Fixed two items thanks to zephyrus [Playtester]
06/04
	* Updated Anubis stats [Playtester]
	* Updated 11.2 gun prices [Playtester]
	- also updated sql files
05/31
	* Fixed some 11.3 equips [Playtester]
	* Some small item fixes [Playtester]
	* Fixed duration of Authorative Badge [Playtester]
05/28
	* Fixed Black Leather Boots and Thorny Shield [Playtester]
	* Fixed Orc Archer's Bow and Silver Shotel [Playtester]
	- info from Doddler's wiki for both
05/26
	* Fixed mob name Atros -> Atroce [Playtester]
05/25
	* Some minor Thor Volcano mob skill changes [Playtester]
05/22
	* Made Thor Volcano mobs safe to use [Playtester]
	- raised their DEF/MDEF
	- raised their speed
	- removed 11.3 drops (using 11.2 drops)
	- added most of their skills thanks to Doddler
	* Rev. 10602 Poison Bottle now reduces SP to 0 as well. [L0ne_W0lf]
05/20
	* Chase Walk's casting time is now 1200ms [Playtester]
	- also fixed movement speed of Sword Master
05/17
	* Updated Knocker [Playtester]
	* Added Magnum Break to Magmaring [Playtester]